--- a/hugo-latest-cd.yml
+++ b/hugo-latest-cd.yml
@@ -18,14 +18,14 @@ jobs:
       - name: 🔨 Set up Node
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 14.x
       - name: 🔧 Install tools
         run: |
           sudo apt install curl jq
           npm install postcss-cli autoprefixer
       - name: 🤵 Install Hugo
         run: |
-          HUGO_VERSION=$(curl -s https://api.github.com/repos/gohugoio/hugo/releases/latest | jq -r '.tag_name')
+          HUGO_VERSION='v0.109.0'
           mkdir tmp/ && cd tmp/
           curl -sSL https://github.com/gohugoio/hugo/releases/download/${HUGO_VERSION}/hugo_extended_${HUGO_VERSION: -6}_Linux-64bit.tar.gz | tar -xvzf-
           sudo mv hugo /usr/local/bin/
